# deterministic-vlm-architecture

./: .gitignore  README.md  architecture_test.py  camera.py  mistral_chat.py  mistral_intent.py  moondream_utils.py  orchestrator.py  package.xml  requirements.txt  setup.cfg  setup.py  stt.py  tts.py  yolo_world_utils.py
docs/: jetson_bringup.md  phase4_validation_checklist.md
kurat_core/: __init__.py  config.py  intent_router.py  interfaces.py  mistral_chat.py  moondream_service.py  orchestrator.py  power_manager.py  types.py  yolo_world_service.py
kurat_io/: __init__.py
kurat_io/frame_sources/: __init__.py  image_file_provider.py  ros_realsense_provider.py
kurat_ros/: __init__.py  orchestrator_node.py
kurat_ros/launch/: kurat.launch.py
scripts/: evaluate_power_aware_runtime.py  power_aware_demo.py
scripts/testing/: architecture_test.py
