<?xml version="1.0"?>
<package format="3">
  <name>kurat</name>
  <version>0.1.0</version>
  <description>Kurat multimodal assistant ROS 2 package.</description>
  <maintainer email="user@example.com">Kurat</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
